#######
History
#######

1.0.2
#####

https://svn.plone.org/svn/collective/Products.OpenXml/tags/1.0.1

* Removed unnecessary required eggs.

1.0.1
#####

https://svn.plone.org/svn/collective/Products.OpenXml/tags/1.0.1

* Added Plone 2.5 compatibility. Note that ATFile that ships with Plone 2.5 does
  not attempt to index file contents. So only icons and mime types work on a
  Vanilla Plone 2.5. If you need support for indexing, consider using
  AttachmentField and PloneExFile that fit with Plone 2.5. As a consequence, the
  unit test "testATfileSearchableText" fails.
  [glenfant]

* Fixed a typo in unit tests.
  [glenfant]

1.0.0
#####

https://svn.plone.org/svn/collective/Products.OpenXml/tags/1.0.0

* Added new mime types to the "mimetypes" standard module (should be
  done by openxmllib in next release)
  [glenfant]

* Transform support when mime type is not provided but the filename is
  available.
  [glenfant]

* Log the error message and traceback when the user provides a crappy
  file.
  [glenfant]

1.0.0 beta 1
############

https://svn.plone.org/svn/collective/Products.OpenXml/tags/1.0.0-beta1/

* First public release
  [glenfant]